# mail_alias_creator

./: .gitignore  LICENSE  README.md  default.nix  development_logging.conf  pyproject.toml
mail_alias_creator/: __init__.py  interface.py  ldap.py  main.py  process.py
mail_alias_creator/entry_processors/: base.py  external_address.py  group.py  include_alias.py  user.py
