[tool.poetry]
name = "mail_alias_creator"
version = "0.1.0"
description = "Set of pyhton scripts to create our mail alias tables from alias definitions"
authors = ["Tim Neumann <neumantm@fius.informatik.uni-stuttgart.de>"]
license = "MIT"

[tool.poetry.scripts]
mail_alias_creator = 'mail_alias_creator.main:main'

[tool.poetry.dependencies]
python = "^3.8"
ldap3 = "^2.8.1"
pyyaml = "^5.4.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pytest = "^6.1.1"
flake8-docstrings = "^1.5.0"
flake8-bugbear = "^20.1.4"

[tool.black]
line-length = 120
include = '\.pyi?$'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
