[tool.poetry]
name = "mail_alias_creator"
version = "1.2.2"
description = "Set of python scripts to create our mail alias tables from alias definitions"
repository = "https://github.com/stuvusIT/mail_alias_creator"
readme = "README.md"
authors = ["Tim Neumann <neumantm@fius.informatik.uni-stuttgart.de>"]
license = "MIT"

[tool.poetry.scripts]
mail_alias_creator = 'mail_alias_creator.main:main'

[tool.poetry.dependencies]
python = "^3.6"
ldap3 = "^2.7"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
pytest = "^6.1.1"
flake8-docstrings = "^1.5.0"
flake8-bugbear = "^20.1.4"

[tool.black]
line-length = 120
include = '\.pyi?$'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
